added setter and getter